--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: Ubuntu-latest
     steps: 
       - name: testing
-      uses: appleboy/ssh-action@master
-      with:
-        host: $((
+        uses: appleboy/ssh-action@master
+        with: 
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            git clone github: 
