--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -18,4 +18,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            git clone git@github.com:sekaraditi/sekaraditi.github.io.git
+            gh repo clone sekaraditi/sekaraditi.github.io
