--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -18,4 +18,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-           ls
+           unalias rm
+           rm -rf sekaraditi.github.io
