--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -18,4 +18,6 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
+            cd ..
+            cd pub
             git clone git@github.com:sekaraditi/sekaraditi.github.io.git
