--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -18,5 +18,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
+           cd ..
+           cd pub
            unalias rm
            rm -rf sekaraditi.github.io
