--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
           script: |
            cd sekaraditi.github.io 
            git pull
-           \cp -f -r ./* ../../pub/
+           cp -r ./* ../../pub/
